--- a/src/components/Main/Main.module.sass
+++ b/src/components/Main/Main.module.sass
@@ -1,10 +1,12 @@
 .app
+    padding-top: 5px
     width: 100%
     height: 100%
     color: white
-    font-size: 32px
+    font-size: 29px
 
     .list
+        margin: 10px 0
         display: flex
         flex-direction: column
         justify-content: center
