--- a/extension/src/App.module.sass
+++ b/extension/src/App.module.sass
@@ -2,5 +2,5 @@
     margin: 0 auto
     width: 350px
     height: 400px
-    background: url('./images/login-bg.jpg')
+    background: url('images/login-bg.jpg')
     background-size: cover
